# bahar

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  DOCKER_DEPLOYMENT.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Makefile  README.md  SCAN_REPORT.md  app.py  classify_enhanced.py  classify_text.py  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  docker-stop.sh  emotion_classification_demo.ipynb  env.example  main.py  multilingual_demo_advanced.py  multilingual_emotion_demo.ipynb  pyproject.toml  requirements.txt  run_app.sh  test_advanced_analysis.py
bahar/: __init__.py
bahar/analyzers/: __init__.py  advanced_analyzer.py  discourse_analyzer.py  embedding_analyzer.py  emotion_analyzer.py  enhanced_analyzer.py  linguistic_analyzer.py  linguistic_samples.py  morphology_analyzer.py  nlp_features.py  semantic_analyzer.py
bahar/cli/: __init__.py  classify_basic.py  classify_enhanced.py  test_categories.py
bahar/datasets/: __init__.py
bahar/demos/: __init__.py  demo_basic.py  demo_enhanced.py  universal_loader_demo.py
bahar/models/: __init__.py  adapter.py  capabilities.py  inspector.py  loader.py  metadata.py  registry.py  result.py
bahar/utils/: __init__.py  language_models.py  rich_output.py
config/: emotion_groups.json  models_registry.json  samples.json  taxonomy.json
docs/: DEVELOPMENT.md  README.md  STREAMLIT_APP.md
docs/api/: core-api.md  streamlit-app.md
docs/app/: README.md  advanced-analysis.md  api-usage.md  emotions.md  linguistic-dimensions.md  model-management.md  (+1 more)
nginx/: nginx.conf
volumes/: .gitignore  README.md
(+27 files in other folders)
