[project]
name = "bahar"
version = "0.2.0"
description = "Multilingual emotion classification using GoEmotions taxonomy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML/NLP
    "transformers>=4.57.0",
    "torch>=2.9.0",
    "spacy>=3.7.0",

    # UI and Formatting
    "rich>=14.2.0",
    "streamlit>=1.50.0",

    # Data Processing
    "pandas>=2.0.0",
    "tiktoken>=0.12.0",

    # Advanced Linguistic Analysis
    "nltk>=3.9.0",              # WordNet, WSD, tokenization
    "gensim>=4.3.0",            # Word2Vec, Doc2Vec embeddings
    "scikit-learn>=1.5.0",      # Clustering, PCA, statistics
    "umap-learn>=0.5.0",        # Dimensionality reduction
    "matplotlib>=3.9.0",        # Visualization
    "seaborn>=0.13.0",          # Statistical plots
    "networkx>=3.3",            # Graph analysis (discourse)
    "python-Levenshtein>=0.25.0",  # String similarity
    "textacy>=0.13.0",          # Advanced text analysis
    "pyphen>=0.16.0",           # Syllable segmentation
    # Note: AllenNLP excluded due to Python 3.12 compatibility issues
    # Alternative: Use spaCy extensions for coreference
]
